# FeedVault.se

./: .air.toml  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  Docker.md  Dockerfile  README.md  add_feed.go  add_item.go  authors.go  db.go  docker-compose.yaml  docker-compose.yml  docker-entrypoint.sh  dublincore.go  extensions.go  feeds.go  go.mod  go.sum  handlers.go  handlers_test.go  html.go  html_test.go  images.go  itunes.go  main.go  main_test.go  manage.py  models.go  opml.go  opml_test.go  pyproject.toml  quotes.go  requirements-dev.txt  requirements.txt  sqlc.yaml  stats.go  stats_test.go  (+4 more)
.github/: SECURITY.md  go.yml  renovate.json
.github/workflows/: docker-publish.yml  go.yml
app/: cli.py  dependencies.py  main.py  settings.py  testboi.py  validators.py
app/routers/: api.py  static.py
app/scrapers/: rss_link_database.py
cli/: __init__.py  __main__.py  add_steam_feeds.py  cli.py  download_steam_ids.py  grab_links.py  update_feeds.py
cmd/feedvault/: main.go
db/: feeds.sql.go  models.go  querier.go  stats.sql.go
feeds/: __init__.py  add_feeds.py  admin.py  apps.py  context_processors.py  forms.py  get_reader.py  models.py  sitemaps.py  stats.py  tests.py  urls.py  validator.py  views.py
feeds/management/commands/: update_feeds.py
feeds/migrations/: 0001_initial.py  0002_alter_author_options_alter_domain_options_and_more.py  0002_alter_feed_data_hash.py  0002_blocklist.py  0003_blocklist_active.py  0003_feed_user.py  0004_alter_blocklist_url.py
feedvault/: __init__.py  add_feeds.py  api.py  apps.py  asgi.py  context_processors.py  feeds.py  models.py  settings.py  signals.py  sitemaps.py  stats.py  tests.py  urls.py  views.py  wsgi.py
feedvault/management/commands/: update_feeds.py
feedvault/migrations/: 0001_initial.py  0002_alter_feed_status.py  0003_rename__id_entry_entry_id_rename__id_feed_feed_id.py  0004_alter_feed_bozo.py  0005_useruploadedfile.py  0006_useruploadedfile_original_filename_and_more.py  0007_useruploadedfile_description_useruploadedfile_notes_and_more.py
pkg/feeds/: feeds.go
pkg/handlers/: api.go  feeds.go  index.go  opml.go
pkg/html/: html.go
pkg/models/: models.go
pkg/opml/: opml.go
pkg/quotes/: quotes.go
pkg/stats/: stats.go
pkg/validate/: validate.go
sql/queries/: feeds.sql  stats.sql
sql/schema/: 20240214043229_feeds.sql  20240215232236_extensions.sql  20240215232245_authors.sql  20240215232251_images.sql  20240215232259_dublin_cores.sql  20240215232318_itunes.sql  20240215232334_enclousures.sql
static/: style.css
templates/: 404.tmpl  405.tmpl  about.tmpl  add.html  api.html  api.tmpl  base.html  base.tmpl  contact.html  domain.html  domains.html  donate.html  donate.tmpl  feed.html  feeds.html  feeds.tmpl  index.html  index.tmpl  privacy.tmpl  search.html  terms.tmpl  upload.html
templates/accounts/: change_password.html  login.html  profile.html  register.html
templates/partials/: domains.html  feeds.html
tests/: html_test.go  opml_test.go  validate_test.go  views_test.go  views_test.py
