[tool.poetry]
name = "feedvault"
version = "0.1.0"
description = "RSS Archive"
authors = ["Joakim Hellsén <tlovinator@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
reader = "^3.12"
fastapi = "^0.111.0"
jinja2 = "^3.1.4"
python-multipart = "^0.0.9"
humanize = "^4.9.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.0"
djlint = "^1.34.1"
pre-commit = "^3.7.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.ruff]
fix = true
unsafe-fixes = true
preview = true
line-length = 120
lint.select = ["ALL"]
lint.ignore = [
  "ANN201", # Checks that public functions and methods have return type annotations.
  "ARG001", # Checks for the presence of unused arguments in function definitions.
  "B008",   # Checks for function calls in default function arguments.
  "D100",   # Checks for undocumented public module definitions.
  "CPY001", # Checks for the absence of copyright notices within Python files.
  "D104",   # Checks for undocumented public package definitions.
  "FIX002", # Checks for "TODO" comments.
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.djlint]
profile = "jinja"
format_attribute_template_tags = true
