[tool.poetry]
name = "feedvault"
version = "0.1.0"
description = "RSS Archive"
authors = ["Joakim Hellsén <tlovinator@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
humanize = "^4.9.0"
jinja2 = "^3.1.4"
python-dotenv = "^1.0.1"
python-multipart = "^0.0.9"
reader = "^3.12"

[tool.poetry.group.dev.dependencies]
djlint = "^1.34.1"
pre-commit = "^3.7.1"
ruff = "^0.4.4"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.ruff]
target-version = "py312"
fix = true
unsafe-fixes = true
preview = true
line-length = 120
lint.select = ["ALL"]
lint.ignore = [
  "ANN201", # Checks that public functions and methods have return type annotations.
  "ARG001", # Checks for the presence of unused arguments in function definitions.
  "B008",   # Checks for function calls in default function arguments.
  "CPY001", # Checks for the absence of copyright notices within Python files.
  "D100",   # Checks for undocumented public module definitions.
  "D104",   # Checks for undocumented public package definitions.
  "FIX002", # Checks for "TODO" comments.
  "RUF029", # Checks for functions declared async that do not await or otherwise use features requiring the function to be declared async.
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.djlint]
profile = "jinja"
format_attribute_template_tags = true
